[package]
name = "wos-fetch"
version = "0.1.0"
description = "Web of Science literature fetcher"
authors = ["zuoliangyu"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "wos_fetch_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri runtime + plugins
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Async + IO
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
regex = "1"
url = "2"
once_cell = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Browser automation (CDP)
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }

# Excel / table IO
calamine = "0.26"
rust_xlsxwriter = "0.79"
zip = "2"

[features]
# this feature is used for production builds or when `devUrl` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
